--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,15 @@ edition = "2024"
 
 [dependencies]
 mpclipboard-generic-client = { git = "https://github.com/mpclipboard/generic-client.git" }
-ksni = { version = "0.3", features = ["blocking"] }
+mpclipboard-common = { git = "https://github.com/mpclipboard/common.git" }
+
+ksni = { version = "0.3" }
 log = "0.4"
 anyhow = "1"
-signal-hook = "0.3"
 wl-clipboard-rs = "0.9"
+wayland-protocols = "0.32.8"
+wayland-client = "0.31.10"
+wayland-protocols-wlr = "0.3.8"
+os_pipe = "1.2.2"
+tokio = { version = "1.46.1", features = ["full"] }
+tokio-util = "0.7.15"
